3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Fix problems with player updating client with spell handling - should all
work now.
--
server/login.c: Move esvr_add_spells() and fix_object() to after 
  esvr_new_player() - when client gets new player protocol from server,
  it purges all info it has, including spell data.
server/player.c: Remove the line that clears the monitor_spells in the
  socket structure.  With the clear there, if you play a new character on
  the same server (savebed, a to play again), this second character
  doesn't get any spells.
socket/request.c: Check to see if pl->spell_state is non null in 
  esrv_update_spells() - in this way, server doesn't try to update
  spells on client before the first add_player_spells() is called.
--
MSW 2007-09-16

server/pets.c: Always mark inventory objects as FLAG_NO_DROP, not only
 objects created from randomitems attribute and having nrof=0. Always
 expand randomitems; do not omit it for player summoned monsters or
 golems.
Andreas Kirschbaum 2007-09-16

Add a message when explore mode is disabled. Add help file for this command.
 lib/Makefile.am
 server/c_misc.c
Added file:
 lib/help/explore
Nicolas Weeger 2007-09-16

Add an 'empty' command, that puts all contents of a (or all) container either
on ground or in player's opened container.
 include/sproto.h
 lib/Makefile.am
 server/c_object.c commands.c
Added file:
 lib/help/empty
Nicolas Weeger 2007-09-09

Server support for Metaserver2 - brought back from trunk:
acinclude.m4: Add LIBCURL_CHECK_CONFIG macro, used by configure.
configure.ac: Add check for pthread, LIBCURL.  Extra
  logic to display if we will build with metaserver2 support